--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "node-fetch": "^3.3.2",
     "node-id3": "^0.2.6",
     "node-lame": "^1.3.2",
-    "package.json": "^2.0.1",
+    "package-lock.json": "^1.0.0",
+    "package.json": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
@@ -55,7 +56,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.34",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
+    "vite": "^6.2.4"
   },
   "description": "![Screenshot 2024-04-21 161657](https://github.com/patelharsh80874/THE-ULTIMATE-SONGS-WEBAPP/assets/110234600/a3ebe5a5-c50c-48ea-b4de-5531846ffeb9)",
   "main": "index.html",
